--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
     "express": "^4.17.2",
     "express-formidable": "^1.2.0",
     "mysql2": "^2.3.3"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.16.5",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.2",
+    "eslint": "^8.5.0",
+    "nodemon": "^2.0.15"
   }
 }
