--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-validator": "^6.14.0",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "navigate": "^0.3.6"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.5",
